[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/widgets/DatePickerLineEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/widgets/ComboBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/widgets/DateRangeSelector.gd" type="Script" id=4]

[node name="DateRangeSelector" type="Popup"]
margin_right = 288.0
margin_bottom = 232.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 283.0
margin_bottom = 227.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 278.0
margin_bottom = 20.0
text = "From:"

[node name="FromLineEdit" parent="PanelContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 24.0
margin_right = 278.0
margin_bottom = 48.0

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 278.0
margin_bottom = 72.0
text = "To:"

[node name="ToLineEdit" parent="PanelContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 76.0
margin_right = 278.0
margin_bottom = 100.0

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 278.0
margin_bottom = 124.0
text = "Relative Range:"

[node name="ComboBox" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 128.0
margin_right = 278.0
margin_bottom = 152.0
items = [ "Last 5 minutes", "Last 15 minutes", "Last 30 minutes", "Last 1 hour", "Last 3 hours", "Last 6 hours", "Last 12 hours", "Last 24 hours", "Last 2 days", "Last 7 days" ]

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 160.0
margin_top = 198.0
margin_right = 278.0
margin_bottom = 222.0
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 24.0
text = "Cancel"

[node name="AcceptButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 118.0
margin_bottom = 24.0
text = "Accept"

[connection signal="option_changed" from="PanelContainer/VBoxContainer/ComboBox" to="." method="_on_ComboBox_option_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_AcceptButton_pressed"]
